# StremioGuard

./: .env.example  .gitignore  CURRENT_PROGRESS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  streamio  streamio.py  stremio  stremio.py
.github/: dependabot.yml
docker/stremio/: Dockerfile  patch-server.js
docs/: comet-patches.md  nginx-allowlist.conf  secure-access.md  tailscale-runbook.md
scripts/: generate_comet_overrides.py
src/stremioguard/: __init__.py  cli.py  comet.py  comet_overrides.py  config.py  env.py  guard.py  init.py  nordvpn.py  orchestrator.py  preflight.py  publishing.py
systemd/user/: stremio-vpn-watch.service
tests/: conftest.py  test_cli.py  test_comet.py  test_env.py  test_guard.py  test_orchestrator.py  test_stremio_vpn.py
